--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,10 @@ site_name: CyberCloud Learnings
 site_url: https://www.cybercloud.guru/
 site_description: Tutorials for Cloud Technologies and Cybersecurity, CloudSecurity, DevSecOps with an easy to understand examples and projects
 site_author: Sanjeev Jaiswal (Jassi)
-copyright: '&copy; Copyright 2022 - Developed with Care by Cybercloud Gurus'
+copyright: '&copy; Copyright 2022 - Developed with Care by CyberCloud Gurus'
+repo_url: https://github.com/jassics/CybercloudLearning
+repo_name: jassics/CybercloudLearning
+repo: fontawesome/brands/github
 
 nav:
     - Home: index.md
@@ -82,6 +85,8 @@ nav:
 theme:
   name: material
   nav_style: dark
+  # logo: assets/logo.png
+  favicon: assets/images/favicon.png
   analytics:
     gtag: G-ABC123
   features:
@@ -105,3 +110,11 @@ theme:
       toggle:
         icon: material/toggle-switch
         name: Switch to light mode
+  extra:
+    consent:
+      title: Cookie consent
+      description: >-
+        We use cookies to recognize your repeated visits and preferences, as well
+        as to measure the effectiveness of our documentation and whether users
+        find what they're searching for. With your consent, you're helping us to
+        make our documentation better.
