--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,4 @@
-click==8.0.4
-ghp-import==2.0.2
-importlib-metadata==4.11.3
-Jinja2==3.0.3
-Markdown==3.3.6
-MarkupSafe==2.1.1
-mergedeep==1.3.4
-mkdocs==1.2.3
-mkdocs-material==8.2.6
-mkdocs-material-extensions==1.0.3
-packaging==21.3
-Pygments==2.11.2
-pymdown-extensions==9.3
-pyparsing==3.0.7
-python-dateutil==2.8.2
-PyYAML==6.0
-pyyaml-env-tag==0.1
-six==1.16.0
-watchdog==2.1.6
-zipp==3.7.0
+mkdocs==1.5.2
+mkdocs-material==9.2.8
+mkdocs-material-extensions==1.1.1
+mkdocs-minify-plugin==0.7.1
