--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -29,10 +29,19 @@ jobs:
       - name: Build Cybercloud using mkdocs
         run: mkdocs build
 
+  
+
       - name: display site folder
         run: |
           ls -lrt
           ls -lRa site/
+
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: site
+          path: site/
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -42,10 +51,17 @@ jobs:
       packages: write
 
     steps:
+
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: site
+      
       - name: display site folder
         run: |
           ls -lrt
           ls -lRa site/
+
 
       - name: Deploy to cybercloud.guru
         uses: appleboy/scp-action@v0.1.4
@@ -57,4 +73,3 @@ jobs:
           source: "site/*"
           target: "/home4/alienco2/public_html/cybercloud"
       
-        
