Fixed path to make scp work

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -60,7 +60,8 @@ jobs:
       - name: display site folder
         run: |
           ls -lrt
-          ls -lRa site/
+          cd ..
+          ls -lRt
 
 
       - name: Deploy to cybercloud.guru
