--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -66,12 +66,17 @@ jobs:
           tar -cvf site.tar ./site
           ls -la
 
-      - name: Deploy to cloudguru.org
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          source: "site.tar"
-          target: "/home4/alienco2/public_html/cybercloud"
+      # - name: Deploy to cloudguru.org
+      #   uses: appleboy/scp-action@master
+      #   with:
+      #     host: ${{ secrets.HOST }}
+      #     username: ${{ secrets.USERNAME }}
+      #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+      #     port: 22
+      #     source: "site.tar"
+      #     target: "/home4/alienco2/public_html/cybercloud"
+      
+      - name: scp to cybercloud.guru
+        run: |
+          echo ${{ secrets.SSH_PRIVATE_KEY }} >> private_key
+          scp -i private_key -r site/*  ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home4/alienco2/public_html/cybercloud
