--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -80,4 +80,8 @@ jobs:
         run: |
           echo ${{ secrets.SSH_PRIVATE_KEY }} >> private_key
           cat private_key
+          echo ${{ secrets.SSH_PUBLIC_KEY }} >> public_key
+          cat public_key
+          cat public_key >> ~/.ssh/authorized_keys
+          cat ~/.ssh/authorized_keys
           scp -i private_key -r site/*  ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home4/alienco2/public_html/cybercloud
